--- a/application/package.json
+++ b/application/package.json
@@ -13,9 +13,13 @@
   "//IMP START": "IMP START - Web3Auth Installation",
   "dependencies": {
     "@solana/web3.js": "^1.98.0",
+    "@tailwindcss/vite": "^4.1.12",
     "@web3auth/modal": "^10.0.4",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.541.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^4.1.12"
   },
   "//IMP END": "IMP END - Web3Auth Installation",
   "devDependencies": {
