--- a/application/package.json
+++ b/application/package.json
@@ -13,6 +13,7 @@
   "//IMP START": "IMP START - Web3Auth Installation",
   "dependencies": {
     "@solana/web3.js": "^1.98.0",
+    "@supabase/supabase-js": "^2.56.0",
     "@tailwindcss/vite": "^4.1.12",
     "@web3auth/modal": "^10.0.4",
     "framer-motion": "^12.23.12",
