--- a/application/package.json
+++ b/application/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.541.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "tailwindcss": "^4.1.12"
   },
   "//IMP END": "IMP END - Web3Auth Installation",
